# metaheurystyka-subset-sum

./: .gitignore  CMakeLists.txt  README.md  ag.h  data.txt  hill_climbing.h  main.cpp  simulated_annealing.h  tabu_search.h  test_first.cpp  utils.h
headers/: ag.h  hill_climbing.h  simulated_annealing.h  tabu_search.h  utils.h
sources/: ag.cpp  hill_climbing.cpp  simulated_annealing.cpp  tabu_search.cpp  utils.cpp
